# exfile2

./: CookieStealer.py  blox-fruit-script.py  build-exe.yml.txt  nuitka_build.py  obfuscated_stealer.py  pyproject.toml  stealth.py  version_info.txt
.github/workflows/: build-exe.yml  build-exe.yml.txt
